# Graph-Streaming-Framework

./: LICENSE  README.md  docker-compose.yml
analytics/: pyproject.toml
graph_processing/: dockerfile  pyproject.toml  run.sh  settings.py  setup.py  wait_for_services.sh
graph_processing/graph_processing/: app.py
producer/: pyproject.toml
producer/producer/: random_producer.py
